syntax="proto3";

package hwscMetadataFileSvc;

option go_package="hwscMetadataFileSvcPb";

service MetadataFileService{
    rpc PostMetadataFile(MetadataFileRequest) returns (MetadataFileResponse) {}
}

message MetadataFile{
    string last_name = 1;
    string first_name = 2;
    string call_type_name = 3;
    string ground_type = 4;
    string region = 5;
    string ocean = 6;
    string sensor_type = 7;
    string sensor_name = 8;
    int32 sample_rate = 9;
    float latitude = 10;
    float longitude = 11;

    repeated string image_url = 12;
    repeated string audio_url = 13;
    repeated string video_url = 14;
    repeated string file_url = 15;

    int64 record_timestamp = 16;
    int64 create_timestamp = 17;
    int64 update_timestamp = 18;
}

message MetadataFileRequest{
    MetadataFile data = 1;
}

message MetadataFileResponse{
    string message = 1;
}